# InterIIT_Code_Repository

./: .gitignore  README.md  planner_config.json  requirements.txt
docs/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/warehouse_hmi/lib/warehouse_hmi/: keyboard_controller  target_gui
install/warehouse_hmi/share/warehouse_hmi/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/warehouse_msgs/share/warehouse_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_msgs/share/warehouse_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_warehouse_msgs__rosidl_generator_cExport.cmake  export_warehouse_msgs__rosidl_generator_cppExport.cmake  export_warehouse_msgs__rosidl_generator_pyExport.cmake  export_warehouse_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_warehouse_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_warehouse_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_warehouse_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  warehouse_msgsConfig.cmake  warehouse_msgs__rosidl_typesupport_cppExport-noconfig.cmake  warehouse_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  warehouse_msgs__rosidl_typesupport_introspection_cExport.cmake  (+2 more)
install/warehouse_navigation/lib/warehouse_navigation/: genetic_node
install/warehouse_navigation/share/warehouse_navigation/: package.sh  package.xml
install/warehouse_robot_bringup/lib/warehouse_robot_bringup/: hardware  lidar_sim  main  robot_sim
install/warehouse_robot_bringup/share/warehouse_robot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_robot_bringup/share/warehouse_robot_bringup/launch/: system.launch.py
install/warehouse_scanning/lib/warehouse_scanning/: autoscan_test  camera_node
install/warehouse_scanning/share/warehouse_scanning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
qr_session_logs/: session_20251206_150420.csv  session_20251206_150613.csv
src/warehouse_hmi/: package.xml  setup.cfg  setup.py
src/warehouse_hmi/HMI_Interface_Web_app/: App.tsx  README.md  constants.ts  index.html  types.ts
src/warehouse_hmi/HMI_Interface_Web_app/components/: Analytics.tsx  CommandLogger.tsx  DataLog.tsx  ManualControl.tsx  MapGenerator.tsx  MapVisualizer.tsx  RosGuide.tsx  Settings.tsx  Sidebar.tsx  SmartCommand.tsx
src/warehouse_hmi/HMI_Interface_Web_app/services/: firebase.ts  mapService.ts  robotService.ts
src/warehouse_hmi/warehouse_hmi/: hmi_display.py  speaker_module.py
src/warehouse_msgs/: CMakeLists.txt
src/warehouse_navigation/: CMakeLists.txt
src/warehouse_navigation/SLAM/: package.xml  setup.py
src/warehouse_navigation/SLAM/config/: ekf.yaml  scan_filter.yaml
src/warehouse_navigation/SLAM/launch/: bringup.launch.py  localization.launch.py  online_async_launch.py
src/warehouse_navigation/SLAM/rviz/: my_robot.rviz
src/warehouse_navigation/SLAM/scripts/: compute_variance.py  odom_imu_samples.csv
src/warehouse_navigation/SLAM/urdf/: final_bot.urdf.xacro
src/warehouse_navigation/mission_planner/: CMakeLists.txt  package.xml
src/warehouse_navigation/mission_planner/config/maps/: test_field.yaml
src/warehouse_navigation/mission_planner/mission_planner/: path_planner.py  truth_map_generator.py  utilities.py  vision.py
src/warehouse_navigation/mission_planner/src/: controller1.cpp  genetic.cpp
src/warehouse_navigation/slam/: package.xml  setup.py
src/warehouse_navigation/slam/config/: mapper_params_online_async.yaml
src/warehouse_navigation/slam/launch/: bringup.launch.py  localization.launch.py  online_async_launch.py
src/warehouse_navigation/slam/maps/: map_2025-12-08_17-19-05.pgm  map_2025-12-08_17-19-05.yaml  map_2025-12-08_17-22-28.pgm  map_2025-12-08_17-22-28.yaml  map_2025-12-08_17-29-09.pgm  map_2025-12-08_17-29-09.yaml  map_2025-12-08_17-31-14.pgm  map_2025-12-08_17-31-14.yaml  map_2025-12-08_17-31-56.yaml  map_2025-12-08_17-37-51.pgm  map_2025-12-08_17-37-51.yaml  map_2025-12-08_17-40-02.pgm  map_2025-12-08_17-40-02.yaml  map_2025-12-08_21-00-11.pgm  map_2025-12-08_21-00-11.yaml  map_2025-12-08_21-12-03.pgm  map_2025-12-08_21-12-03.yaml  map_2025-12-08_22-28-33.pgm  map_2025-12-08_22-28-33.yaml  map_2025-12-10_21-14-00.pgm  map_2025-12-10_21-14-00.yaml  map_2025-12-10_21-19-35.pgm  map_2025-12-10_21-19-35.yaml  map_2025-12-10_21-43-14.pgm  map_2025-12-10_21-43-14.yaml  map_2025-12-10_22-19-25.pgm  map_2025-12-10_22-19-25.yaml  map_2025-12-10_22-27-20.pgm  map_2025-12-10_22-27-20.yaml  map_2025-12-10_22-36-12.pgm  map_2025-12-10_22-36-12.yaml  map_2025-12-12_17-00-20.pgm  map_2025-12-12_17-00-20.yaml  map_2025-12-13_04-38-53.pgm  map_2025-12-13_04-38-53.yaml  map_2025-12-13_04-40-13.yaml  map_2025-12-13_05-16-28.pgm  map_2025-12-13_05-16-28.yaml  map_2025-12-13_11-09-15.pgm  map_2025-12-13_11-09-15.yaml
src/warehouse_navigation/slam/scripts/: map_aligner.py  map_update.py  save_map.sh  store.py
src/warehouse_navigation/slam/slam/: data_converter.py  keyboard_map_saver.py
src/warehouse_navigation/slam/urdf/: final_bot.urdf
src/warehouse_navigation/src/: controller1.cpp  genetic.cpp
src/warehouse_navigation/warehouse_navigation/: obstacle_detector.py  path_planner.py  truth_map_generator.py  utilities.py  vision.py
src/warehouse_robot_bringup/: setup.cfg  setup.py
src/warehouse_robot_bringup/launch/: simulation.launch.py  system.launch.py
src/warehouse_robot_bringup/warehouse_robot_bringup/: hardware.py  main.py
src/warehouse_scanning/: setup.cfg  setup.py
src/warehouse_scanning/warehouse_scanning/: camera_node.py
(+21 files in other folders)
